--- a/index.html
+++ b/index.html
@@ -1,93 +1,119 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>febuiles/s3share @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #f9f4c2;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
-    }
-    #container {
+    <title>febuiles/s3share @ GitHub</title>
+
+    <style type="text/css">
+      body {
+      margin-top: 1.0em;
+      background-color: #f9f4c2;
+      font-family: "Helvetica,Arial,FreeSans";
+      color: #000000;
+      }
+      #container {
       margin: 0 auto;
       width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #060b3d; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #060b3d; }
-    h3 { text-align: center; color: #060b3d; }
-    a { color: #060b3d; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
-</head>
+      }
+      h1 { font-size: 3.8em; color: #060b3d; margin-bottom: 3px; }
+      h1 .small { font-size: 0.4em; }
+      h1 a { text-decoration: none }
+      h2 { font-size: 1.5em; color: #060b3d; }
+      h3 { text-align: center; color: #060b3d; }
+      a { color: #060b3d; }
+      .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+      .download { float: right; }
+      pre { background: #000; color: #fff; padding: 15px;}
+      hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+      .footer { text-align:center; padding-top:30px; font-style: italic; }
+    </style>
 
-<body>
-  <a href="http://github.com/febuiles/s3share"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  </head>
 
-  <div id="container">
+  <body>
+    <a href="http://github.com/febuiles/s3share"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-    <div class="download">
-      <a href="http://github.com/febuiles/s3share/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/febuiles/s3share/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+    <div id="container">
+
+
+      <h1><a href="http://github.com/febuiles/s3share">s3share</a></h1>
+
+
+      <div class="description">
+        S3 uploading command-line tool
+      </div>
+
+      <p>S3Share is a simple script to upload your files to S3 and share them with your friends.</p><h2>Dependencies</h2>
+      <p>
+        <ul>
+          <li>Ruby</li>
+          <li>aws-s3</li></ul></p>
+      <h2>Install</h2>
+      <p>You can install from Rubygems
+        <pre><code>$ gem install s3share</code></pre>
+        Or you can download the source and build it manually:
+        <pre><code>$ git clone https://febuiles@github.com/febuiles/s3share.git
+$ rake install</code></pre>
+      </p>
+
+      <h2>Setting ENV variables</h2>
+
+      <p>You&#8217;ll need to set the three following ENV variables:</p>
+
+      <ul>
+        <li><code>AMAZON_ACCESS_KEY_ID</code>: AWS access key.</li>
+        <li><code>AMAZON_SECRET_ACCESS_KEY</code>: AWS secret access key.</li>
+        <li><code>AMAZON_S3_DEFAULT_BUCKET</code>: Name of the bucket where the uploads will be held.</li>
+      </ul>
+
+      <p>The last variable is visible in the URL returned to the user: <code>http://s3.amazonaws.com/{AMAZON_S3_DEFAULT_BUCKET}/some_photo.png</code>, so make sure you choose something pretty. This value is global for all the S3 namespace, meaning you need to find something unique between all the S3 users (&#8220;some-user-name_uploads&#8221; should do the trick).</p>
+
+      <p>You can set these variables in a <code>~/.amazon_keys</code> file:</p>
+
+      <pre><code>export AMAZON_ACCESS_KEY_ID='someaccesskey'
+export AMAZON_SECRET_ACCESS_KEY='fortyweirdcharacters'
+export AMAZON_S3_DEFAULT_BUCKET='joesuploads'</code></pre>
+
+      <p>And then include it in your <code>~/.bash_profile</code>:</p>
+
+      <pre><code># place at the bottom of your .bash_profile
+if [[ -f "$HOME/.amazon_keys" ]]; then
+    source "$HOME/.amazon_keys";
+fi</code></pre>
+
+      <h2>Usage</h2>
+
+      <pre><code>$ s3.rb [file]</code></pre>
+
+      <p>An example:</p>
+
+      <pre><code>$ s3.rb kezia.png
+
+kezia.png uploaded to: http://s3.amazonaws.com/heroin-uploads/kezia.png</code></pre>
+
+      <p>By default all the uploaded files will be publicly readable. Once the upload is complete the URL will be copied to your clipboard for easy access.</p>
+
+      <h2>Docco</h2>
+      <p>You can find the Docco output of the project <a href="/docs">here</a>.</p>
+
+
+      <h2>Bugs/Contact</h2>
+
+      <p>Got a problem? Create an issue in the <a href="https://github.com/febuiles/s3share/issues">Github Tracker</a>.</p>
+
+      <h2>Authors</h2>
+      <p>Federico Builes (federico.builes@gmail.com)<br/><br/>      </p>
+
+
+      <div class="footer">
+        get the source code on GitHub : <a href="http://github.com/febuiles/s3share">febuiles/s3share</a>
+      </div>
+
     </div>
 
-    <h1><a href="http://github.com/febuiles/s3share">s3share</a>
-      <span class="small">by <a href="http://github.com/febuiles">febuiles</a></span></h1>
 
-    <div class="description">
-      S3 uploading command-line tool
-    </div>
-
-    <p>S3Share is a simple script to upload your files to S3 and share them with your friends.</p><h2>Dependencies</h2>
-<p>Ruby
-aws-s3</p>
-<h2>Install</h2>
-<p>You can install from Rubygems
-
-    $ gem install s3share
-
-Or you can download the source and build it manually:
-
-    $ git clone https://febuiles@github.com/febuiles/s3share.git
-    $ rake install
-</p>
-<h2>Authors</h2>
-<p>Federico Builes (federico.builes@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Federico Builes (federico.builes@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/febuiles/s3share/zipball/master">zip</a> or
-      <a href="http://github.com/febuiles/s3share/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/febuiles/s3share</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/febuiles/s3share">febuiles/s3share</a>
-    </div>
-
-  </div>
-
-  
-</body>
+  </body>
 </html>
